started building ratemap
also added a copy of jquery, and did a few other minor things

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Inside the shader, we check to see if the current vertex is an end cap, if so we
 </div>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>  
+<script src="jquery.min.js"></script>  
 <script src="main.js"></script>
 <script src="tool.js"></script>
 <script src="parsefiles.js"></script>
