fixed first problems with ratemaps
ratemaps can now be shown though the interface is very much at the dev
stage still

--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@ you can drag further files onto the window at any point<br>
 	</div>
 
 	<div class="button_group">
-		<input type="checkbox" name="channel" id="channel1" value="1" /><label for="channel1">1</label>
-		<input type="checkbox" name="channel" id="channel2" value="2"/><label for="channel2">2</label>
-		<input type="checkbox" name="channel" id="channel3" value="3"/><label for="channel3">3</label>
-		<input type="checkbox" name="channel" id="channel4" value="4"/><label for="channel4">4</label>
-		[Channel]
+		<input type="checkbox" name="channel" id="channel1" value="1" /><label for="channel1">c1</label>
+		<input type="checkbox" name="channel" id="channel2" value="2"/><label for="channel2">c2</label>
+		<input type="checkbox" name="channel" id="channel3" value="3"/><label for="channel3">c3</label>
+		<input type="checkbox" name="channel" id="channel4" value="4"/><label for="channel4">c4</label>
+
+		<button id="ratemaps_button">ratemaps (dev)</button>
 	</div>
 
 	<div class="button_group">
@@ -210,6 +211,7 @@ Inside the shader, we check to see if the current vertex is an end cap, if so we
 </div>
 
 <script src="jquery.min.js"></script>  
+<script src="Mlib.js"></script>
 <script src="main.js"></script>
 <script src="tool.js"></script>
 <script src="parsefiles.js"></script>
