mainly css, and firefox bug fixes

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ you can drag further files onto the window at any point<br>
 <div class="side_panel">
 
 <div class="side_panel_row">
-<b>button panel</b>
 <div class="toggle_panel" id="button_panel_toggle"></div>
+<b>button panel</b>
 
 <div id="button_panel" class="collapsable_panel">
 	<div class="button_group">
@@ -57,14 +57,14 @@ you can drag further files onto the window at any point<br>
 
 <div class="side_panel_row">
 <div class="toggle_panel" id="files_panel_toggle"></div>
-<B>available files</B><br>
+<B>available files</B>
 <div class="collapsable_panel" id="files_panel">
 </div>
 </div>
 
 <div class="side_panel_row">
 <div class="toggle_panel" id="spatial_panel_toggle"></div>
-<B>pos data</B><br>
+<B>pos data</B>
 <div style="text-align:center;" class="collapsable_panel" id="spatial_panel" state="closed">
     <canvas id="posplot" width="200" height="200"></canvas> 
 </div>
@@ -72,7 +72,7 @@ you can drag further files onto the window at any point<br>
 
 <div class="side_panel_row">
 <div class="toggle_panel" id="action_panel_toggle"></div>
-<B>action list</B><br>
+<B>action list</B>
 <div class="collapsable_panel" id="action_panel" state="closed">
 <div class='undo' style="display:none;">Undo</div>
 </div>
@@ -83,7 +83,7 @@ you can drag further files onto the window at any point<br>
 	<div class="last_side_panel_row_inner">
 		<div class="last_side_panel_row_head">
 			<B>file headers</B>
-			<input type="search" id="header_search" value="" size ="15" placeholder="filter headers"  incremental="incremental">
+			<input type="search" id="header_search" value="" size ="15" placeholder="filter headers"  incremental="incremental" >
 		</div>
 		<div class="last_side_panel_row_body">
 				<div id="info_panel" class="scrollable_area"></div>
