added SwitchCut in fileorganiser

--- a/index.html
+++ b/index.html
@@ -94,7 +94,15 @@ you can drag further files onto the window at any point<br>
 			<input type="search" id="header_search" value="" size ="15" placeholder="filter headers"  incremental="incremental" >
 		</div>
 		<div class="last_side_panel_row_body">
-				<div id="info_panel" class="scrollable_area"></div>
+				<div id="info_panel" class="scrollable_area">
+					<div id='header_info' class='header_info'>
+					
+					<div class="file_info_title" id="tet_info" style="display:none;"></div>
+					<div class="file_info_title" id="cut_info" style="display:none;"></div>
+					<div class="file_info_title" id="pos_info" style="display:none;"></div>
+					<div class="file_info_title" id="set_info" style="display:none;"></div>
+					</div>
+				</div>
 		</div>
 	</div>
 </div>
