--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <div class="file_drop">
 <div id="filestem_caption"></div>
-<div class="file_drop_text">drag one or more of the following here: 
-<b><br>tetrode and cut files | pos file</b><br>
+<div class="file_drop_text">drop one or more of the following data files here: 
+<b><br>tet | cut | pos | set</b><br>
 you can drag further files onto the window at any point<br>
 <button class="help_button">help</button>
 <button id="filesystem_button">turn on FileAPIs</button>
@@ -80,7 +80,7 @@ you can drag further files onto the window at any point<br>
 
 <div class="side_panel_row">
 <div class="toggle_panel" id="action_panel_toggle"></div>
-<B>action list</B>
+<B>cut action history</B>
 <div class="collapsable_panel" id="action_panel" state="closed">
 <div class='undo' style="display:none;">Undo</div>
 </div>
@@ -130,6 +130,7 @@ you can drag further files onto the window at any point<br>
 <ul>
 
 <li>Added basic ratemap generating code.</li>
+
 <li>Several sections of code have been restructured to make them more modular and easier to use.</li>
 
 <li>Can now toggle each channel on and off, by holding ctrl key when selecting channels in the button pane.</li>
