reorder on amplitude

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ you can drag further files onto the window at any point<br>
 	</div>
 
 	<div class="button_group">
-	<button id="reorder">Reorder</button>
+	<button id="reorder_n_button">Reorder n</button>
+	<button id="reorder_A_button">Reorder A</button>
 	<button id="autocut">Autocut**</button>
 	<span id="autocut_caption"></span>
 	</div>
