added basic separator ui
several bugs present and ui is poor

--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@ you can drag further files onto the window at any point<br>
 <u>Changes</u>
 <ul>
 
+<li>Added double click separator UI.  It's not as helpful as I'd hoped though.</li>
+
 <li>Restuctured much of the code for dealing with cuts and organising multiple files.  Can now switch between different cuts.</li>
 
 <li>Added basic ratemap generating code.</li>
