cut with immutables and new webgl-waveform
webgl-waveforms is missing some render code still

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ Inside the shader, we check to see if the current vertex is an end cap, if so we
 <script src="filesystem.js"></script>
 <script src="ratemap.js"></script>
 <script src="fileorganiser.js"></script>
-<!-- <script src="webgl-debug.js"></script> -->
+ <script src="webgl-debug.js"></script> 
 <script src="gpu-distmatrix.js"></script>
 <script src="autocut.js"></script>
 
