--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@ you can drag further files onto the window at any point<br>
 		<input type="checkbox" name="channel" id="channel3" value="3"/><label for="channel3">c3</label>
 		<input type="checkbox" name="channel" id="channel4" value="4"/><label for="channel4">c4</label>
         <input type="checkbox" name="channel" id="ratemaps_chk" value="101"/><label for="ratemaps_chk">rate*</label>
-		<button id="toggle_palette">toggle palette</button> 
+		<input type="checkbox" name="channel" id="tautocorr_chk" value="201"/><label for="tautocorr_chk">t-autocorr</label>
+		
 	</div>
-
+	<div class="button_group">
+	<button id="toggle_palette">toggle palette</button> 
+	</div>
 	<div class="button_group">
 	<button id="reorder_n_button">Reorder n</button>
 	<button id="reorder_A_button">Reorder A</button>
@@ -128,6 +131,7 @@ you can drag further files onto the window at any point<br>
 <script src="parsefiles.js"></script>
 <script src="filesystem.js"></script>
 <script src="ratemap.js"></script>
+<script src="temporalcorr.js"></script>
 <script src="fileorganiser.js"></script>
  <script src="webgl-debug.js"></script> 
 <script src="gpu-distmatrix.js"></script>
