created worker-bridge.js & now used in tempolcorr
worker-bridge also has its own gist on github

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ you can drag further files onto the window at any point<br>
 
 <script src="jquery.min.js"></script>  
 <script src="utils.js"></script>
+<script src="worker-bridge.js"></script>
 <script src="Mlib.js"></script>
 <script src="main.js"></script>
 <script src="cut.js"></script>
