webgl-waveforms copies old chans plus T.RM bugfix

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ you can drag further files onto the window at any point<br>
 		<input type="checkbox" name="channel" id="channel2" value="2"/><label for="channel2">c2</label>
 		<input type="checkbox" name="channel" id="channel3" value="3"/><label for="channel3">c3</label>
 		<input type="checkbox" name="channel" id="channel4" value="4"/><label for="channel4">c4</label>
-        <input type="checkbox" name="channel" id="ratemaps_chk" value="101"/><label for="ratemaps_chk">rm*</label>
-		<input type="checkbox" name="channel" id="tautocorr_chk" value="201"/><label for="tautocorr_chk">t-autocorr</label>
+        <input type="checkbox" name="channel" id="ratemaps_chk" value="101"/><label for="ratemaps_chk">rm</label>
+		<input type="checkbox" name="channel" id="tautocorr_chk" value="201"/><label for="tautocorr_chk">t-autocorr*</label>
 		
 	</div>
 	<div class="button_group">
@@ -58,7 +58,7 @@ you can drag further files onto the window at any point<br>
 	</div>
 
 	<div class="notes">
-	*ratemaps are still pretty basic<br>
+	*t-autocorr is set at 500ms<br>
 	**autocut only uses about 6000 spikes and only runs on one channel
 	</div>
 </div>
