bug fix for waveform rendering
y offsets now correct in offCanv

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ you can drag further files onto the window at any point<br>
 <script src="ratemap.js"></script>
 <script src="temporalcorr.js"></script>
 <script src="fileorganiser.js"></script>
- <script src="webgl-debug.js"></script> 
+<!-- <script src="webgl-debug.js"></script> -->
 <script src="gpu-distmatrix.js"></script>
 <script src="autocut.js"></script>
 
