--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ you can drag further files onto the window at any point<br>
 <button id="filesystem_button">turn on FileAPIs</button>
 <button id="filesystem_load_button" style="display: none;">use existing files</button>
 </div>
+<div id="works_with_chrome">Tested with Chrome <img src="chromelogo.png" width="15px"/></div>;
 </div>
 
 <div class="side_panel">
