keyboard shortcuts + autocut with bridgedworker

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ you can drag further files onto the window at any point<br>
 <button id="filesystem_button">turn on FileAPIs</button>
 <button id="filesystem_load_button" style="display: none;">use existing files</button>
 </div>
-<div id="works_with_chrome">Tested with Chrome <img src="chromelogo.png" width="15px"/></div>;
+<div id="works_with_chrome">Tested with Chrome <img src="chromelogo.png" width="15px"/></div>
 </div>
 
 <div class="side_panel">
@@ -121,6 +121,7 @@ you can drag further files onto the window at any point<br>
 
 
 <script src="jquery.min.js"></script>  
+<script src="keymaster.min.js"></script>  
 <script src="utils.js"></script>
 <script src="worker-bridge.js"></script>
 <script src="Mlib.js"></script>
