reorder amps bugifx and initial screen changes

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 <b><br>tet | cut | pos | set</b><br>
 you can drag further files onto the window at any point<br>
 <button class="help_button">help (wiki)</button>
-<button id="filesystem_button">turn on FileAPIs</button>
-<button id="filesystem_load_button" style="display: none;">use existing files</button>
 </div>
 <div id="works_with_chrome">Tested with Chrome <img src="chromelogo.png" width="15px"/></div>
+<div id="filesystem_buttons"> <button id="filesystem_button">turn on FileAPIs</button>
+<button id="filesystem_load_button" style="display: none;">use existing files</button>
+</div>
 </div>
 
 
