--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ you can drag further files onto the window at any point<br>
 				<B>cluster plots</B>
 			</div>		
 			<div class="last_side_panel_row_body">
-				<div id="cluster_panel" class="scrollable_area">
+				<div id="cluster_panel" class="scrollable_area grabbable">
 				
 				</div>
 			</div>
