painter info initial

--- a/index.html
+++ b/index.html
@@ -165,6 +165,21 @@ you can drag further files onto the window at any point<br>
 					cluster plots
 				</div>		
 				<div class="last_side_panel_row_body">
+					<div class="cluster_info">
+						<div class="cluster_painter">
+							<div class='cluster-sticker' id='painter-dest'>?</div> 
+							&#x2190; { 
+							<div id='painter-src'>
+								<div class='cluster-sticker'>?</div>
+							</div> 
+							}
+						</div>
+						<div class="cluster_others">
+							<div class='cluster-sticker' >?</div>
+							<div class='cluster-sticker'>?</div>
+							<div class='cluster-sticker'>?</div>
+						</div>
+					</div>
 					<div id="cluster_panel" class="scrollable_area grabbable">
 					
 					</div>
