fix cluster height bug

--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@ you can drag further files onto the window at any point<br>
 				<div class="last_side_panel_row_head row_title">
 					cluster plots
 				</div>		
-				<div class="last_side_panel_row_body">
-					<div class="cluster_info">
+				<div class="cluster_info">
 						<div class="cluster_painter">
 							<div class='cluster-sticker' id='painter-dest'>?</div> 
 							&#8592; { 
@@ -177,9 +176,8 @@ you can drag further files onto the window at any point<br>
 						<div class="cluster_others">
 						</div>
 					</div>
-					<div id="cluster_panel" class="scrollable_area grabbable">
-					
-					</div>
+				<div class="last_side_panel_row_body">
+					<div id="cluster_panel" class="scrollable_area grabbable"></div>
 				</div>
 			</div>
 		</div>
