shortcuts for 3 tile buttons

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@ you can drag further files onto the window at any point<br>
 							<li><b>d</b> toggle drift rendering on/off</li>
 							<li><b>space</b> hold down space and click with mouse for plot grabbing or removal</li>
 							<li><b>+/-</b> grow/shrink size of cluster plots (note that "+" is actually the "=" key)</li>
-							<li><b>enter</b> paint into new destination group (TODO: this isn't quite true at the moment)</li>
+							<li><b>enter</b> increment cluster painting destination group</li>
+							<li><b>e</b> set the cluster painting destination group to the "active" group, i.e. the one currently under the mouse</li>
+							<li><b>f</b> similar to <i>e</i> above, but this sets the srouce group. Note you can hold down shift to toggle the src groups.</li>
+							<li><b>s</b> launch the swap dialog for the "active" group.</li>
 							</ul>
 						</div>						
 					</div>
