--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@ you can drag further files onto the window at any point<br>
 	</div>
 
 	<div class="tilewall">
+	<div class="tilewall_text">No data selected. Choose a trial from the available files.</div>
 	</div>
 	
 	<div class="mask"></div>
