text - dropzone text changed

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <div class="file_drop">
 <div id="filestem_caption"></div>
 <div class="file_drop_text">drop one or more of the following data files here: 
-<b><br>tet | cut | pos | set</b><br>
+<b><br>set | pos | tet | cut | clu</b><br>
 you can drag further files onto the window at any point<br>
+other file types will be ignored<br>
 <button class="help_button" style="position: relative; top: 20px;">Go to quickstart guide on GitHub</button>
 </div>
 <div id="works_with_chrome">Tested with Chrome <img src="chromelogo.png" width="15px"/></div>
