--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@ other file types will be ignored<br>
 	<div class="side_panel" vertical layout>
 
 		<div class="side_panel_row" vertical layout>
-			<div class="row_title" id="button_panel_toggle">button panel</div>
 
 			<div id="button_panel" class="collapsable_panel">
 				<div class="button_group">
@@ -154,16 +153,14 @@ other file types will be ignored<br>
 
 		<core-splitter direction="up"></core-splitter>
 
-		<div class="side_panel_row" vertical layout>
-			<div class="row_title" id="files_panel_toggle">available files</div>
-			<div class="collapsable_panel" id="files_panel"></div>
+		<div class="side_panel_row side_panel_row_capped" vertical layout>
+			<div class="collapsable_panel" id="files_panel" flex></div>
 		</div>
 		
 		<core-splitter direction="up"></core-splitter>
 
 		<div class="side_panel_row" vertical layout>
-			<div class="row_title"  id="spatial_panel_toggle">pos data</div>
-			<div style="text-align:center;" class="collapsable_panel grabbable" id="spatial_panel" state="closed">
+			<div style="text-align:center;" class="collapsable_panel grabbable" id="spatial_panel" flex>
 				<div class='pos_plot_holder'>
 					<canvas id="posplot" class='poslayer' width="200" height="200"></canvas> 
 					<canvas id="posoverlay" class='poslayer' width="200" height="200"></canvas> 
@@ -173,26 +170,21 @@ other file types will be ignored<br>
 
 		<core-splitter direction="up"></core-splitter>
 		
-		<div class="side_panel_row" flex>
-			<div class="last_side_panel_row_inner">
-				<div class="last_side_panel_row_head row_title">
-					cluster plots
-				</div>		
-				<div class="cluster_info">
-						<div class="cluster_painter">
-							<div class='cluster-sticker' id='painter-dest'>?</div> 
-							&#8592; { 
-							<div id='painter-src'>
-								<div class='cluster-sticker'>?</div>
-							</div> 
-							}
-						</div>
-						<div class="cluster_others">
-						</div>
+		<div class="side_panel_row side_panel_row_capped" flex>
+			<div class="cluster_info">
+					<div class="cluster_painter">
+						<div class='cluster-sticker' id='painter-dest'>?</div> 
+						&#8592; { 
+						<div id='painter-src'>
+							<div class='cluster-sticker'>?</div>
+						</div> 
+						}
 					</div>
-				<div class="last_side_panel_row_body">
-					<div id="cluster_panel" class="scrollable_area grabbable" flex></div>
+					<div class="cluster_others">
+					</div>
 				</div>
+			<div class="side_panel_row_body">
+				<div id="cluster_panel" class="scrollable_area grabbable" flex></div>
 			</div>
 		</div>
 
