more still on sidepanel

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ other file types will be ignored<br>
 
 		<core-splitter direction="up"></core-splitter>
 
-		<div class="side_panel_row side_panel_row_capped" vertical layout>
+		<div class="side_panel_row side_panel_row" vertical layout>
 			<div class="scrollable_area" id="files_panel" flex></div>
 		</div>
 		
@@ -161,16 +161,14 @@ other file types will be ignored<br>
 
 		<div class="side_panel_row" vertical layout>
 			<div class="grabbable" id="spatial_panel" flex>
-				<div class='pos_plot_holder'>
-					<canvas id="posplot" class='poslayer' width="200" height="200"></canvas> 
-					<canvas id="posoverlay" class='poslayer' width="200" height="200"></canvas> 
-				</div>
+				<canvas id="posplot" class='poslayer' width="200" height="200"></canvas> 
+				<canvas id="posoverlay" class='poslayer' width="200" height="200"></canvas> 
 			</div>
 		</div>
 
 		<core-splitter direction="up"></core-splitter>
 		
-		<div class="side_panel_row side_panel_row_capped" flex vertical layout>
+		<div class="side_panel_row side_panel_row" flex vertical layout>
 			<div class="cluster_info">
 					<div class="cluster_painter">
 						<div class='cluster-sticker' id='painter-dest'>?</div> 
